Реализован механизм поиска. Доделано CRUD приложение. Добавлена страница описания фильма

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -197,6 +197,8 @@
     <Content Include="Views\Home\CRUD.cshtml" />
     <Content Include="Views\Home\ShowAllDataFromDb.cshtml" />
     <Content Include="Views\Home\Update.cshtml" />
+    <Content Include="Views\Home\Read.cshtml" />
+    <Content Include="Views\Home\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
