Добавлена выгрузка в .docx файл

--- a/WebApplication1/WebApplication1/Web.config
+++ b/WebApplication1/WebApplication1/Web.config
@@ -16,8 +16,33 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation debug="true" targetFramework="4.6.1">
+      <assemblies>
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.6.1" />
+    <pages>
+      <controls>
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+      </controls>
+      <namespaces>
+      </namespaces>
+    </pages>
+    <httpHandlers>
+      <add verb="*" path="captimage.axd" type="Syncfusion.JavaScript.ImageHandler, Syncfusion.EJ, Version=18.1450.0.52, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89" />
+    </httpHandlers>
+    <profile defaultProvider="DefaultProfileProvider">
+      <providers>
+      </providers>
+    </profile>
+    <membership defaultProvider="DefaultMembershipProvider">
+      <providers>
+      </providers>
+    </membership>
+    <roleManager defaultProvider="DefaultRoleProvider">
+      <providers>
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -53,6 +78,18 @@
         <publisherPolicy apply="no" />
         <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Compression.Base" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.1460.0.52" newVersion="18.1460.0.52" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.OfficeChart.Base" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.1460.0.52" newVersion="18.1460.0.52" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.1460.0.52" newVersion="18.1460.0.52" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -85,4 +122,11 @@
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
     <add name="Model1" connectionString="DATA SOURCE=localhost:1521/AA21;PASSWORD=TheOriginals99;USER ID=&quot;C#SAM&quot;" providerName="Oracle.ManagedDataAccess.Client" />
   </connectionStrings>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
+    <handlers>
+      <add verb="*" path="captimage.axd" name="syncfusion_generatetools" type="Syncfusion.JavaScript.ImageHandler, Syncfusion.EJ, Version=18.1450.0.52, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89" />
+    </handlers>
+  </system.webServer>
 </configuration>
