--- a/WebApplication1/WebApplication1/packages.config
+++ b/WebApplication1/WebApplication1/packages.config
@@ -22,5 +22,9 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Oracle.ManagedDataAccess" version="19.7.0" targetFramework="net461" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.7.0" targetFramework="net461" />
+  <package id="Syncfusion.Compression.Base" version="18.1.0.52" targetFramework="net461" />
+  <package id="Syncfusion.DocIO.AspNet.Mvc5" version="18.1.0.52" targetFramework="net461" />
+  <package id="Syncfusion.Licensing" version="18.1.0.52" targetFramework="net461" />
+  <package id="Syncfusion.OfficeChart.Base" version="18.1.0.52" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
