--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -237,6 +237,8 @@
     <Content Include="Views\Home\ResultQuery.cshtml" />
     <Content Include="Views\Home\DohodFilmByDate.cshtml" />
     <Content Include="Views\Home\ResultQuery2.cshtml" />
+    <Content Include="Views\Home\LengthFilm.cshtml" />
+    <Content Include="Views\Home\CalcYear.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
